[project]
name = "voxpaste"
version = "0.1.0"
description = "Record audio and transcribe via multiple STT providers (Mistral, OpenAI, Groq, Deepgram)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Felix Brockmeier" }]
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "scipy>=1.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
voxpaste = "main:main"
