[project]
name = "voxpaste"
version = "0.1.0"
description = "Record audio and transcribe via multiple STT providers (Mistral, OpenAI, Groq, Deepgram)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Felix Brockmeier" }]
requires-python = ">=3.11"
keywords = ["voice", "transcription", "stt", "speech-to-text", "whisper", "mistral", "groq", "deepgram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "scipy>=1.12.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/felixbrock/voxpaste"
Repository = "https://github.com/felixbrock/voxpaste"
Issues = "https://github.com/felixbrock/voxpaste/issues"

[project.scripts]
voxpaste = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[tool.hatch.build.targets.sdist]
only-include = ["main.py", "README.md", "LICENSE", "pyproject.toml", ".env.example"]
